修复api文件缺少函数定义导致前端页面显示问题